--- a/agentic_system/requirements.txt
+++ b/agentic_system/requirements.txt
@@ -28,6 +28,10 @@ duckduckgo-search>=6.0.0
 google-genai>=1.0.0
 # 또는 레거시: google-generativeai>=0.8.0
 
+# fal.ai Virtual Try-On (실제 합성 이미지 생성)
+fal-client>=0.4.0
+requests>=2.28.0
+
 # 환경 변수 (.env 로드)
 python-dotenv>=1.0.0
 
