Cloudflare Pages 배포 워크플로 추가, Vite base 환경변수화, 배포 안내 문서
Made-with: Cursor

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,8 @@ jobs:
 
       - name: Build
         working-directory: agentic_system/frontend
+        env:
+          VITE_BASE_PATH: '/Fashion-Agentic-AI-System_01/'
         run: npm run build
 
       - name: Upload artifact
